# MA

./: README.md  main.py
config/: imm.cfg  imm_CV_CA.cfg  (+8 more)
cpp/: CMakeLists.txt  main.cpp
cpp/avbase/: CMakeLists.txt  CTestConfig.cmake  Doxyfile  LocateBuildSystem.cmake  build_package.py  build_package_details.py  checkout_build_system.sh  conanfile.py  msgbase_defines.md  required_packages.cmake
cpp/avbase/avauth/: CMakeLists.txt
cpp/avbase/avauth/avauthlib/: CMakeLists.txt  avauthenticator.cpp  avauthenticator.h  avauthenticatorconfig.cpp  avauthenticatorconfig.h  avconvert.h  avidtoken.h  avjsonutils.cpp  avjsonutils.h  avopeniddata.cpp  avopeniddata.h  avservicesmetadata.cpp  avservicesmetadata.h  avtokendata.cpp  avtokendata.h
cpp/avbase/avauth/avauthtestcli/: CMakeLists.txt  avauthtestcli.cpp
cpp/avbase/avauth/avauthtestgui/: CMakeLists.txt  application.cpp  application.h  avauthtestclient.cpp  avlogmodel.cpp  avlogmodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
cpp/avbase/avcalculationlib/: CMakeLists.txt  avaviationcalculator.cpp  avaviationcalculator.h  avconvexhull.h  avcoordellipsoid.h  avcoordinatetransform3dbase.cpp  avcoordinatetransform3dbase.h  avcoordinatetransformbase.cpp  avcoordinatetransformbase.h  avdgstosystemtrafo.cpp  avdgstosystemtrafo.h  avearthdatum.cpp  avearthdatum.h  averrorellipse.cpp  averrorellipse.h  avgausskruegersystemtrafo.cpp  avgausskruegersystemtrafo.h  avgausskruegertrafo.cpp  avgausskruegertrafo.h  avgeoref.cpp  avgeoref.h  avgeoreftrafo.cpp  avgeoreftrafo.h  avimagetransformation.cpp  avimagetransformation.h  avmeteosattrafo.cpp  avmeteosattrafo.h  avplanarcalculator.cpp  avplanarcalculator.h  avrandom.cpp  avrandom.h  avrunningmean.h  avrunningmeantime.h  avsciconst.cpp  avsciconst.h  avsmrtrafo.cpp  avsmrtrafo.h  avssrtrafo.cpp  avssrtrafo.h  avstereotrafo.cpp  (+19 more)
cpp/avbase/avlib/: CMakeLists.txt  av4dtrajectory.cpp  av4dtrajectory.h  avbytearrayhandler.cpp  avbytearrayhandler.h  avclienthandlercallbackiface.h  avconfig.cpp  avconfig.h  avconfig2.cpp  avconfig2.h  avconfig2adapters.cpp  avconfig2adapters.h  avconfig2builtinparams.cpp  avconfig2builtinparams.h  avconfig2classic.cpp  avconfig2classic.h  avconfig2classic_macros.h  avconfig2cstyle.cpp  avconfig2cstyle.h  avconfig2exporterfactory.cpp  avconfig2exporterfactory.h  avconfig2interfaces.cpp  avconfig2interfaces.h  avconfig2loadeddata.cpp  avconfig2loadeddata.h  avconfig2metadata.cpp  avconfig2metadata.h  avconfig2projectfactsconfig.cpp  avconfig2projectfactsconfig.h  avconfig2restrictions.cpp  avconfig2restrictions.h  avconfig2saver.cpp  avconfig2saver.h  avconfig2sharedconfigholder.h  avconfig2storagelocation.cpp  avconfig2storagelocation.h  avconfig2types.h  avconfig2xml.cpp  avconfig2xml.h  avconfiglist.h  (+176 more)
cpp/avbase/avlibdeprecated/: CMakeLists.txt  avarchiveplayer.cpp  avarchiveplayer.h  avdatetimedeprecated.cpp  avdatetimedeprecated.h  avibitlogo.h  avlist.h  avmiscdeprecated.cpp  avmiscdeprecated.h  avmultimap.cpp  avmultimap.h  avobservableevent.cpp  avobservableevent.h  avobserver.cpp  avobserver.h  avpairlist.h  avprintabledocument.cpp  avprintabledocument.h  avprintabledocumentfooter.cpp  avprintabledocumentfooter.h  avprintabledocumentheader.cpp  avprintabledocumentheader.h  avprintabletabledocument.cpp  avprintabletabledocument.h  avprinter.cpp  avprinter.h  avprintertablecolumnstyle.cpp  avprintertablecolumnstyle.h  avptrbuffer.h  avptrhash.h  avptrhashint.h  avptrhashqstring.h  avptrhashvoid.h  avptrlist.h  avqt3compat.cpp  avqt3compat.h  avrawsaver.cpp  avrawsaver.h  avset.h  avsocketdevice.cpp  (+6 more)
cpp/avbase/avunittesthelperlib/: CMakeLists.txt  avunittesthelpers.cpp  avunittesthelpers.h  avunittestmain.cpp  avunittestmain.h  mockqnetworkaccessmanager.cpp  mockqnetworkaccessmanager.h
cpp/avbase/doc/: changelog_0.10.0.md  changelog_0.10.1.md  changelog_0.9.0.md  changelog_1.0.0.md  changelog_1.0.1.md  changelog_1.1.0.md  changelog_1.2.0.md  changelog_1.2.1.md  changelog_1.3.0.md  changelog_1.3.1.md  changelog_1.3.2.md  changelog_1.4.0.md  changelog_1.5.0.md  changelog_10.0.0.md  changelog_10.1.0.md  changelog_10.2.0.md  changelog_10.2.1.md  changelog_10.3.0.md  changelog_11.0.0.md  changelog_11.0.1.md  changelog_12.0.0.md  changelog_12.1.0.md  changelog_12.1.1.md  changelog_13.0.0.md  changelog_14.0.0.md  changelog_14.0.1.md  changelog_14.1.0.md  changelog_15.0.0.md  changelog_15.0.1.md  changelog_16.0.0.md  changelog_17.0.0.md  changelog_18.0.0.md  changelog_2.0.0.md  changelog_2.0.1.md  changelog_2.0.2.md  changelog_2.1.0.md  changelog_3.0.0.md  changelog_4.0.0.md  changelog_4.1.0.md  changelog_5.0.0.md  (+9 more)
cpp/avbase/test_package/: conanfile.py
cpp/config/: imm_airport_areas.cc  imm_config2_models.cc  imm_config2_models.cfg  imm_config2_models.js  imm_config2_static_dynamic.cc
cpp/filterlib/: avimmestimator.cpp  avimmestimator.h  avimmextendedkalmanfilter.cpp  avimmextendedkalmanfilter.h  avimmfilterbase.h  avimmkalmanfilter.cpp  avimmkalmanfilter.h  imm_estimator.cpp  imm_estimator.h  imm_extended_kalman_filter.cpp  imm_extended_kalman_filter.h  imm_filter_base.h  imm_kalman_filter.cpp  imm_kalman_filter.h
cpp/unittests/: CMakeLists.txt  tstavimmconfigreader.cpp  tstavimmmvn.cpp  tstavimmtimeline1.cpp  tstimmtestmain.cpp
cpp/unittests/imm_data/: imm_data_linear_uniform_motion.csv  imm_data_test.csv
cpp/unittests/test_data/: test_data_linear_uniform_motion.csv
cpp/unittests/testhelper/: avimmtester.h
cpp/utils/: CMakeLists.txt  avimmairportconfigs.cpp  avimmairportconfigs.h  avimmconfig.cpp  avimmconfig.h  avimmconfigparser.h  avimmmakros.h  avimmtypedefs.h  exprtk.hpp  imm_config.cpp  imm_config.h  makros.h  multivariante_density_normal_distribution.h  typedefs.h
cpp/utils/filterlib/: avimmestimator.cpp  avimmestimator.h  avimmextendedkalmanfilter.cpp  avimmextendedkalmanfilter.h  avimmfilterbase.h  avimmkalmanfilter.cpp  avimmkalmanfilter.h
cpp/utils/unittests/: CMakeLists.txt  tstavimmconfigreader.cpp  tstavimmestimator.cpp  tstavimmextendedkalmanfilter.cpp  tstavimmfilterbase.cpp  tstavimmkalmanfilter.cpp  tstimmtestmain.cpp
(+242 files in other folders)
