# --------------------------------------------------------------------------
# export compile commands for clang-tidy



# --------------------------------------------------------------------------

add_subdirectory(avcalculationlib)
add_subdirectory(avlib)
add_subdirectory(avlibdeprecated)
add_subdirectory(avauth)
add_subdirectory(avunittesthelperlib)

# --------------------------------------------------------------------------


#! End of file
